v0212 fixes (look in changelog)

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,11 @@
 ﻿MCRoyale changelog
+v0.2.1.2
+- Добавлены параметры OutsideZoneBreakingEnable и OutsideZoneBreakingDistance
+- Добавлены оповещения для сквадов, если был автобалансером был присоединен игрок
+- Изменено ограничение для спавна монстров. Коэффициенты вероятности спавна теперь не влияют на спавны под землей
+- Исправлена ошибка, при которой выпадал дроп из сундуков после восстановления карты
+- Незначительные улучшения в коде
+
 v0.2.1.1
 - Добавлены параметры EnableChestTracking и RestoreChestBlock для очистки затронутых во время игры сундуков
 - Изменена механика получения урона вне игровой области
